Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21438

Warning on setting an empty first ListElement

    XMLWordPrintable

Details

    • 895ec534acb63eacd625e2f320cb266dbff3fdb3

    Description

      Doing something like

      ListElement { }

      is, in the implementation of QtQuick, conceptually invalid - preventing any items being added to a model.

      There should be a warning when this is done, preventing some confusion for users if they do attempt this.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            glwatson Glenn Watson
            dajansen Damian Jansen (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes