Add warning if defining a ListModel with no roles.

When static ListElement types are declared, the role names are
inferred from them at compile time. If they are all empty, it's
not possible to add roles to the model, so warn the user of this
case.

Task-number: QTBUG-21438
Change-Id: Ib4ac30e160c44a5a57ebd1c49fccc2b3db5f0977
Reviewed-by: Bea Lam <bea.lam@nokia.com>